plasma-modified-defaults-mx (21.08.01) mx; urgency=medium

  * update Honesty wallpaper 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Mon, 23 Aug 2021 21:39:38 -0400

plasma-modified-defaults-mx (21.07.01) mx; urgency=medium

  * modify taskmanager and default panel configs 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 03 Jul 2021 20:03:13 -0400

plasma-modified-defaults-mx (21.03.01) mx; urgency=medium

  * modify default taskmanager config 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Sat, 27 Mar 2021 10:19:06 -0400

plasma-modified-defaults-mx (20.08.01) mx; urgency=medium

  * change timout for logout/reboot/shutdown menu 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 13 Aug 2020 19:40:58 -0400

plasma-modified-defaults-mx (20.07.02) mx; urgency=medium

  * revised defaults for panel, wallpaper, appmenu 

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Thu, 30 Jul 2020 22:20:08 -0400

plasma-modified-defaults-mx (20.07.01) mx; urgency=medium

  * intial release

 -- Dolphin Oracle <dolphinoracle@gmail.com>  Tue, 21 Jul 2020 19:52:12 -0500