@@ -19,10 +19,10 @@
 
 import QtQuick 2.2
 import QtQuick.Layouts 1.2
-import QtQuick.Controls 1.1 as Controls
+import QtQuick.Controls 2.12 as QQC2
 
 import org.kde.plasma.core 2.0 as PlasmaCore
-import org.kde.plasma.components 2.0 as PlasmaComponents
+import org.kde.plasma.components 3.0 as PlasmaComponents
 import org.kde.kcoreaddons 1.0 as KCoreAddons
 
 import "../components"
@@ -77,7 +77,7 @@ PlasmaCore.ColorScope {
         includeUnusedSessions: false
     }
 
-    Controls.Action {
+    QQC2.Action {
         onTriggered: root.cancelRequested()
         shortcut: "Escape"
     }
@@ -117,7 +117,7 @@ PlasmaCore.ColorScope {
         onClicked: root.cancelRequested()
     }
     UserDelegate {
-        width: units.iconSizes.enormous
+        width: units.gridUnit * 7
         height: width
         anchors {
             horizontalCenter: parent.horizontalCenter
@@ -141,6 +141,7 @@ PlasmaCore.ColorScope {
         width: Math.max(implicitWidth, units.gridUnit * 16)
 
         PlasmaComponents.Label {
+            font.pointSize: theme.defaultFont.pointSize + 1
             Layout.maximumWidth: units.gridUnit * 16
             Layout.alignment: Qt.AlignHCenter
             Layout.fillWidth: true
@@ -148,10 +149,22 @@ PlasmaCore.ColorScope {
             wrapMode: Text.WordWrap
             font.italic: true
             text: i18ndp("plasma_lookandfeel_org.kde.lookandfeel",
-                         "One other user is currently logged in. If the computer is shut down or rebooted, that user may lose work.",
-                         "%1 other users are currently logged in. If the computer is shut down or rebooted, those users may lose work.",
+                         "One other user is currently logged in. If the computer is shut down or restarted, that user may lose work.",
+                         "%1 other users are currently logged in. If the computer is shut down or restarted, those users may lose work.",
                          sessionsModel.count)
             visible: sessionsModel.count > 1
+        }
+
+        PlasmaComponents.Label {
+            font.pointSize: theme.defaultFont.pointSize + 1
+            Layout.maximumWidth: units.gridUnit * 16
+            Layout.alignment: Qt.AlignHCenter
+            Layout.fillWidth: true
+            horizontalAlignment: Text.AlignHCenter
+            wrapMode: Text.WordWrap
+            font.italic: true
+            text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "When restarted, the computer will enter the firmware setup screen.")
+            visible: rebootToFirmwareSetup
         }
 
         RowLayout {
@@ -160,7 +173,7 @@ PlasmaCore.ColorScope {
             LogoutButton {
                 id: suspendButton
                 iconSource: "system-suspend"
-                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Suspend")
+                text: i18ndc("plasma_lookandfeel_org.kde.lookandfeel", "Suspend to RAM", "Sleep")
                 action: root.sleepRequested
                 KeyNavigation.left: logoutButton
                 KeyNavigation.right: hibernateButton
@@ -178,36 +191,37 @@ PlasmaCore.ColorScope {
             LogoutButton {
                 id: rebootButton
                 iconSource: "system-reboot"
-                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Reboot")
+                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Restart")
                 action: root.rebootRequested
                 KeyNavigation.left: hibernateButton
                 KeyNavigation.right: shutdownButton
-                focus: sdtype == ShutdownType.ShutdownTypeReboot
+                focus: sdtype === ShutdownType.ShutdownTypeReboot
                 visible: maysd
             }
             LogoutButton {
                 id: shutdownButton
                 iconSource: "system-shutdown"
-                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Shutdown")
+                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Shut Down")
                 action: root.haltRequested
                 KeyNavigation.left: rebootButton
                 KeyNavigation.right: logoutButton
-                focus: sdtype == ShutdownType.ShutdownTypeHalt
+                focus: sdtype === ShutdownType.ShutdownTypeHalt
                 visible: maysd
             }
             LogoutButton {
                 id: logoutButton
                 iconSource: "system-log-out"
-                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Logout")
+                text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Log Out")
                 action: root.logoutRequested
                 KeyNavigation.left: shutdownButton
                 KeyNavigation.right: suspendButton
-                focus: sdtype == ShutdownType.ShutdownTypeNone
+                focus: sdtype === ShutdownType.ShutdownTypeNone
                 visible: canLogout
             }
         }
 
         PlasmaComponents.Label {
+            font.pointSize: theme.defaultFont.pointSize + 1
             Layout.alignment: Qt.AlignHCenter
             //opacity, as visible would re-layout
             opacity: countDownTimer.running ? 1 : 0
@@ -220,7 +234,7 @@ PlasmaCore.ColorScope {
             text: {
                 switch (sdtype) {
                     case ShutdownType.ShutdownTypeReboot:
-                        return i18ndp("plasma_lookandfeel_org.kde.lookandfeel", "Reboot in 1 second", "Reboot in %1 seconds", root.remainingTime);
+                        return i18ndp("plasma_lookandfeel_org.kde.lookandfeel", "Restarting in 1 second", "Restarting in %1 seconds", root.remainingTime);
                     case ShutdownType.ShutdownTypeHalt:
                         return i18ndp("plasma_lookandfeel_org.kde.lookandfeel", "Shutting down in 1 second", "Shutting down in %1 seconds", root.remainingTime);
                     default:
@@ -232,11 +246,15 @@ PlasmaCore.ColorScope {
         RowLayout {
             Layout.alignment: Qt.AlignHCenter
             PlasmaComponents.Button {
-                enabled: root.currentAction != null
+                implicitWidth: units.gridUnit * 6
+                font.pointSize: theme.defaultFont.pointSize + 1
+                enabled: root.currentAction !== null
                 text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "OK")
                 onClicked: root.currentAction()
             }
             PlasmaComponents.Button {
+                implicitWidth: units.gridUnit * 6
+                font.pointSize: theme.defaultFont.pointSize + 1
                 text: i18nd("plasma_lookandfeel_org.kde.lookandfeel", "Cancel")
                 onClicked: root.cancelRequested()
             }
