@@ -1,3 +1,9 @@
+plasma-modified-defaults-mx (22.01.01mx21) ; urgency=medium
+
+  * update logout.qml
+
+ -- Dolphin Oracle <dolphinoracle@gmail.com>  Tue, 11 Jan 2022 06:37:17 -0500
+
 plasma-modified-defaults-mx (21.08.01) mx; urgency=medium
 
   * update Honesty wallpaper 
